# rust-optimize

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE.md  Makefile  README.md  cliff.toml  deny.toml  rustfmt.toml  typos.toml
.claude/commands/: commit-push-pr.md  commit-push.md  commit.md
.github/workflows/: audit.yml  ci.yml  publish.yml
examples/: advanced_features.rs  async_api_optimization.rs  basic_optimization.rs  ml_hyperparameter_tuning.rs  parameter_api.rs  parameter_types.rs  pruning.rs  pruning_and_callbacks.rs  sampler_comparison.rs
optimizer-derive/: Cargo.toml
scripts/: make-release
src/: distribution.rs  error.rs  fanova.rs  importance.rs  lib.rs  multi_objective.rs  param.rs  parameter.rs  pareto.rs  rng_util.rs  study.rs  trial.rs  types.rs  visualization.rs
src/kde/: multivariate.rs  univariate.rs
src/pruner/: hyperband.rs  median.rs  mod.rs  nop.rs  patient.rs  percentile.rs  successive_halving.rs  threshold.rs  wilcoxon.rs
src/sampler/: bohb.rs  cma_es.rs  differential_evolution.rs  genetic.rs  gp.rs  grid.rs  mod.rs  moead.rs  motpe.rs  nsga2.rs  nsga3.rs  random.rs  sobol.rs  tpe.rs
src/sampler/tpe/: mod.rs  multivariate.rs  sampler.rs
src/sampler/tpe/multivariate/: engine.rs  mod.rs
src/storage/: journal.rs  memory.rs  mod.rs
tests/: async_tests.rs  differential_evolution_tests.rs  gp_tests.rs  importance_tests.rs  integration.rs  journal_tests.rs  multi_objective_tests.rs  multivariate_tpe_integration.rs  serde_tests.rs  stress_tests.rs  user_attr_tests.rs
tests/sampler/: main.rs  multivariate_tpe.rs  sobol.rs  tpe.rs
tests/study/: workflow.rs
