[workspace]
members = ["optimizer-derive"]

[package]
name = "optimizer"
version = "0.9.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
authors = ["Manuel Raimann <raimannma@outlook.de"]
description = "Bayesian and population-based optimization library with an Optuna-like API for hyperparameter tuning and black-box optimization"
repository = "https://github.com/raimannma/rust-optimizer"
documentation = "https://docs.rs/optimizer"
keywords = ["optimization", "hyperparameter", "tpe", "grid-search", "bayesian"]
categories = ["algorithms", "science", "mathematics"]
readme = "README.md"

[dependencies]
fastrand = "2.3"
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["sync", "rt-multi-thread"], optional = true }
optimizer-derive = { version = "0.1.0", path = "optimizer-derive", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing = { version = "0.1.29", optional = true }
sobol_burley = { version = "0.5", optional = true }
nalgebra = { version = "0.34", optional = true }
fs2 = { version = "0.4", optional = true }

[features]
default = []
async = ["dep:tokio"]
derive = ["dep:optimizer-derive"]
serde = ["dep:serde", "dep:serde_json"]
journal = ["dep:fs2", "serde"]
tracing = ["dep:tracing"]
sobol = ["dep:sobol_burley"]
cma-es = ["dep:nalgebra"]
gp = ["dep:nalgebra"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
optimizer-derive = { version = "0.1.0", path = "optimizer-derive" }
serde_json = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "samplers"
harness = false

[[bench]]
name = "optimization"
harness = false

[[example]]
name = "basic_optimization"
path = "examples/basic_optimization.rs"

[[example]]
name = "parameter_types"
path = "examples/parameter_types.rs"
required-features = ["derive"]

[[example]]
name = "sampler_comparison"
path = "examples/sampler_comparison.rs"

[[example]]
name = "pruning_and_callbacks"
path = "examples/pruning_and_callbacks.rs"

[[example]]
name = "advanced_features"
path = "examples/advanced_features.rs"
required-features = ["async", "journal"]

[[test]]
name = "journal_tests"
required-features = ["journal"]
